--- a/wisereads-newui/apache2.conf
+++ b/wisereads-newui/apache2.conf
@@ -1,5 +1,6 @@
 DefaultRuntimeDir ${APACHE_RUN_DIR}
 
+ServerName localhost
 #
 # PidFile: The file in which the server should record its process
 # identification number when it starts.
@@ -35,6 +36,8 @@ KeepAliveTimeout 5
 # These need to be set in /etc/apache2/envvars
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
+
+
 
 #
 # HostnameLookups: Log the names of clients or just their IP addresses
@@ -126,13 +129,16 @@ AccessFileName .htaccess
 # Note that the use of %{X-Forwarded-For}i instead of %h is not recommended.
 # Use mod_remoteip instead.
 #
+# Include of directories ignores editors' and dpkg's backup files,
+#RemoteIPHeader X-Forwarded-For
+LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+LogFormat "%h %l %u %t \"%r\" %>s %b" common
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
-LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
+#LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
+LogFormat "%a %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
 LogFormat "%h %l %u %t \"%r\" %>s %O" common
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
-
-# Include of directories ignores editors' and dpkg's backup files,
 # see README.Debian for details.
 
 # Include generic snippets of statements
@@ -142,5 +148,4 @@ IncludeOptional conf-enabled/*.conf
 IncludeOptional sites-enabled/*.conf
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
-
 
